k8s/staging/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kartol-app-staging-service
  namespace: kartol-staging
  labels:
    app: kartol-app-staging
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: kartol-app-staging
